fix overflow text

--- a/app/assets/stylesheets/clips.css.scss
+++ b/app/assets/stylesheets/clips.css.scss
@@ -174,9 +174,15 @@ span.title {
   font-weight: normal;
   display: block;
   color: #888;
-  /* margin: -0.5em 0 0.6em; */
-  white-space: normal;
   line-height: 18px;
+  white-space: pre;           /* CSS 2.0 */
+  white-space: pre-wrap;      /* CSS 2.1 */
+  white-space: pre-line;      /* CSS 3.0 */
+  white-space: -pre-wrap;     /* Opera 4-6 */
+  white-space: -o-pre-wrap;   /* Opera 7 */
+  white-space: -moz-pre-wrap; /* Mozilla */
+  white-space: -hp-pre-wrap;  /* HP Printers */
+  word-wrap: break-word;      /* IE 5+ */
 }
 .date-separator{
   border: 1px solid #F2F2F2/*{a-bar-border}*/;
